--- a/Templates/template.home.html
+++ b/Templates/template.home.html
@@ -6,8 +6,8 @@
 					<a href="#!/p/{{pageLink}}/0"
 					   ng-show="homeData[0].images"
 					   ng-animate="{show: 'xexample-show', hide: 'xexample-hide'}">
-						<img ngc-lazy-image="homeData[0].images.Thumbnails[2].PhotoUri"/>
-						<div class="gallery-info-text">{{homeData[0].Resources.header.Value}}</div>
+						<img ngc-lazy-image="homeData[0].images.Thumbnails[2].PhotoUri" width="100%" height="100%"/>
+						<div class="gallery-info-text"><h1 class="font-3x-responsive">{{homeData[0].Resources.header.Value}}</h1></div>
 					</a>
 				</div>
 			</div>
@@ -19,8 +19,8 @@
 				<div class="homeimage">
 					<div class="image-placeholder">
 						<a href="#!/p/{{pageLink}}/1">
-							<img ngc-lazy-image="homeData[1].images.Thumbnails[1].PhotoUri"/>
-							<div class="gallery-info-text">{{homeData[1].Resources.header.Value}}</div>
+							<img ngc-lazy-image="homeData[1].images.Thumbnails[1].PhotoUri" width="100%" height="100%"/>
+							<div class="gallery-info-text"><h1 class="font-3x-responsive">{{homeData[1].Resources.header.Value}}</h1></div>
 						</a>
 					</div>
 				</div>
@@ -31,8 +31,8 @@
 				<div class="homeimage">
 					<div class="image-placeholder">
 						<a href="#!/p/{{pageLink}}/2">
-							<img ngc-lazy-image="homeData[2].images.Thumbnails[1].PhotoUri"/>
-							<div class="gallery-info-text">{{homeData[2].Resources.header.Value}}</div>
+							<img ngc-lazy-image="homeData[2].images.Thumbnails[1].PhotoUri" width="100%" height="100%"/>
+							<div class="gallery-info-text"><h1 class="font-3x-responsive">{{homeData[2].Resources.header.Value}}</h1></div>
 						</a>
 					</div>
 				</div>
@@ -56,8 +56,8 @@
 				<div class="homeimage lastline">
 					<div class="image-placeholder">
 						<a href="#!/p/{{pageLink}}/3">
-							<img ngc-lazy-image="homeData[3].images.Thumbnails[1].PhotoUri"/>
-							<div class="gallery-info-text">{{homeData[3].Resources.header.Value}}</div>
+							<img ngc-lazy-image="homeData[3].images.Thumbnails[1].PhotoUri" width="100%" height="100%"/>
+							<div class="gallery-info-text"><h1 class="font-3x-responsive">{{homeData[3].Resources.header.Value}}</h1></div>
 						</a>
 					</div>
 				</div>
@@ -68,8 +68,8 @@
 				<div class="homeimage lastline">
 					<div class="image-placeholder">
 						<a href="#!/p/{{pageLink}}/4">
-							<img ngc-lazy-image="homeData[4].images.Thumbnails[1].PhotoUri"/>
-							<div class="gallery-info-text">{{homeData[4].Resources.header.Value}}</div>
+							<img ngc-lazy-image="homeData[4].images.Thumbnails[1].PhotoUri" width="100%" height="100%"/>
+							<div class="gallery-info-text"><h1 class="font-3x-responsive">{{homeData[4].Resources.header.Value}}</h1></div>
 						</a>
 					</div>
 				</div>
