--- a/Css/masparti-responsive.css
+++ b/Css/masparti-responsive.css
@@ -14,6 +14,9 @@
   .font-4x-responsive {
     font-size: 6em;
   }
+  .font-3x-responsive {
+    font-size: 3em;
+  }
 }
 @media (min-width: 768px) and (max-width: 1199px) {
   body {
@@ -28,6 +31,9 @@
   }
   .font-4x-responsive {
     font-size: 4.800000000000001em;
+  }
+  .font-3x-responsive {
+    font-size: 2.4000000000000004em;
   }
 }
 @media (max-width: 767px) {
@@ -44,6 +50,9 @@
   .font-4x-responsive {
     font-size: 4.199999999999999em;
   }
+  .font-3x-responsive {
+    font-size: 2.0999999999999996em;
+  }
 }
 @media (max-width: 480px) {
   body {
@@ -58,5 +67,8 @@
   }
   .font-4x-responsive {
     font-size: 3.5999999999999996em;
+  }
+  .font-3x-responsive {
+    font-size: 1.7999999999999998em;
   }
 }
