--- a/Templates/template.galleryImageViewer.html
+++ b/Templates/template.galleryImageViewer.html
@@ -1,39 +1,4 @@
-<style>
-	.dumbBoxWrap { /* The div that shows/hides. */
-		z-index:40001; /* High z-index to ensure it appears above all content */
-		position: absolute;
-		top:0;
-		left:0;
-	}
-
-	.dumbBoxOverlay { /* Shades out background when selector is active */
-		position:absolute;
-		width:100%;
-		height:100%;
-		background-color:black;
-		opacity:.8;
-		min-width: 1020px;
-		-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=80)";
-		filter:alpha(opacity=80);
-		z-index:40001;
-	}
-	.vertical-offset { /* Fixed position to provide the vertical offset */
-		position:absolute;
-		z-index:40002; /* ensures box appears above overlay */
-	}
-
-	.dumbBox { /* The actual box, centered in the fixed-position div */
-		width:405px; /* Whatever width you want the box to be */
-		position:relative;
-		margin:0 auto;
-		background-color:white;
-		padding:10px;
-		border:1px solid black;
-	}
-
-</style>
-
-<div class="dumbBoxWrap" ng-controller="galleryImageViewerController" ng-show="gallery" >
+<div class="dumbBoxWrap gallery-image-viewer" ng-controller="galleryImageViewerController" ng-show="gallery" >
 	<div class="dumbBoxOverlay">
 		&nbsp;
 	</div>
@@ -45,7 +10,6 @@
 			<span style="color: white" ng-show="skipping > 0" >...přeskakujem.....</span>
 			<div ng-show="loading" style="float:right"><img src="Css/loaders/horizontalloadersmall_white.gif"></div>
 		</div>
-
 		<ngc-responsive-image gallery-image="image" />
 
 	</div>
