--- a/Css/main.less
+++ b/Css/main.less
@@ -118,12 +118,12 @@ img {
     border-color: transparent;
     cursor: pointer;
     color: @linkColor;
-}
 
-.btn-link:hover {
-    color: @linkColorHover;
-    text-decoration: underline;
-    background-color: transparent;
+    &:hover {
+        opacity: 1;
+        color: @linkColorHover;
+        background-color: transparent;
+    }
 }
 
 .btn-link[disabled]:hover {
@@ -144,18 +144,18 @@ img {
         display: none;
         text-overflow: ellipsis;
         position: absolute;
-		height: 100%;
+        height: 100%;
         color: #000;
-    	vertical-align: middle;
-		top:0;
-		overflow: hidden;
-		min-height: 100%;
-		h1{
-			display: table-cell;
-			vertical-align: middle;
-			text-align: center;
-		}
-	}
+        vertical-align: middle;
+        top: 0;
+        overflow: hidden;
+        min-height: 100%;
+        h1 {
+            display: table-cell;
+            vertical-align: middle;
+            text-align: center;
+        }
+    }
 
     .handwritten {
         overflow: hidden;
@@ -203,7 +203,7 @@ img {
         opacity: 1;
         &:hover {
             .gallery-info-text {
-				display: table;
+                display: table;
             }
         }
         a {
@@ -224,7 +224,7 @@ img {
         padding-right: 10px;
         &:hover {
             .gallery-info-text {
-				display: table;
+                display: table;
             }
         }
     }
@@ -287,6 +287,11 @@ img {
 }
 
 .template-p {
+    .loader{
+        position: relative;
+        width: 220px;
+        margin: auto;
+     }
     .footer {
         color: #ccc;
         padding-top: 3em;
@@ -310,6 +315,9 @@ img {
                 padding: 0;
             }
             a {
+                display: inline-block;
+                .animate(1500ms);
+                padding-left: 1em;
                 color: #ccc;
                 text-decoration: none;
             }
@@ -372,40 +380,171 @@ img {
 .view-leave-active {
 }
 
-
-
 .gallery-image-viewer {
-	&.dumbBoxWrap { /* The div that shows/hides. */
-		z-index:40001; /* High z-index to ensure it appears above all content */
-		position: absolute;
-		top:0;
-		left:0;
-	}
-	.dumbBoxOverlay { /* Shades out background when selector is active */
-		position:fixed;
-		width:100%;
-		height:100%;
-		background-color:black;
-		opacity:.8; /* Sets opacity so it's partly transparent */
-		-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=80)"; /* IE transparency */
-		filter:alpha(opacity=80); /* More IE transparency */
-		z-index:40001;
-	}
-	.vertical-offset { /* Fixed position to provide the vertical offset */
-		position:fixed;
-		width:100%;
-		z-index:40002; /* ensures box appears above overlay */
-	}
-	.dumbBox { /* The actual box, centered in the fixed-position div */
-		width:405px; /* Whatever width you want the box to be */
-		position:relative;
-		margin:0 auto;
+    .loader {
+        width: 220px;
+        top: 35%;
+        margin: auto;
+        position: relative;
+    }
+    .navigation-buttons {
+        position: absolute;
+        width: 100%;
+        .close {
+            position: absolute;
+            right:0px ;
+        }
+    }
+    &.dumbBoxWrap {
+        /* The div that shows/hides. */
+        z-index: 40001; /* High z-index to ensure it appears above all content */
+        position: absolute;
+        top: 0;
+        left: 0;
+    }
+    .dumbBoxOverlay {
+        /* Shades out background when selector is active */
+        position: fixed;
+        width: 100%;
+        height: 100%;
+        background-color: black;
+        opacity: .8; /* Sets opacity so it's partly transparent */
+        -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=80)"; /* IE transparency */
+        filter: alpha(opacity=80); /* More IE transparency */
+        z-index: 40001;
+    }
+    .vertical-offset {
+        /* Fixed position to provide the vertical offset */
+        position: fixed;
+        width: 100%;
+        z-index: 40002; /* ensures box appears above overlay */
+    }
+    .dumbBox {
+        /* The actual box, centered in the fixed-position div */
+        width: 405px; /* Whatever width you want the box to be */
+        position: relative;
+        margin: 0 auto;
 
-		background-color:white;
-		padding:10px;
-		border:1px solid black;
-	}
+        background-color: white;
+        padding: 10px;
+        border: 1px solid black;
+    }
 
+}
+
+.gdata-album {
+    h1 {
+        margin-bottom: 0;
+    }
+    h3 {
+        margin-top: 0;
+    }
+    .image-small {
+        display: inline-block;
+        padding: 0 10px 10px 0;
+    }
+}
+
+.tooltip {
+    line-height: 25px;
+    position: absolute;
+    z-index: 1030;
+    display: block;
+    visibility: visible;
+    padding: 5px;
+    opacity: 0;
+    filter: alpha(opacity=0);
+}
+
+//
+// Tooltips
+// --------------------------------------------------
+
+@tooltipArrowWidth: 5px;
+@tooltipArrowColor: #000;
+
+// Base class
+.tooltip {
+    line-height: 25px;
+
+    position: absolute;
+    z-index: 1030;
+    display: block;
+    visibility: visible;
+    padding: 5px;
+    opacity: 0;
+    &.in {
+        opacity: 0.8;
+    }
+    &.top {
+        margin-top: -3px;
+    }
+    &.right {
+        margin-left: 3px;
+    }
+    &.bottom {
+        margin-top: 3px;
+    }
+    &.left {
+        margin-left: -3px;
+    }
+}
+
+.border-radius(@radius) {
+    -webkit-border-radius: @radius;
+    -moz-border-radius: @radius;
+    border-radius: @radius;
+}
+
+// Wrapper for the tooltip content
+.tooltip-inner {
+    max-width: 200px;
+    padding: 3px 8px;
+    color: #fff;
+    text-align: center;
+    text-decoration: none;
+    background-color: #000;
+    .border-radius(4px);
+}
+
+// Arrows
+.tooltip-arrow {
+    position: absolute;
+    width: 0;
+    height: 0;
+    border-color: transparent;
+    border-style: solid;
+}
+
+.tooltip {
+    &.top .tooltip-arrow {
+        bottom: 0;
+        left: 50%;
+        margin-left: -@tooltipArrowWidth;
+        border-width: @tooltipArrowWidth @tooltipArrowWidth 0;
+        border-top-color: @tooltipArrowColor;
+    }
+    &.right .tooltip-arrow {
+        top: 50%;
+        left: 0;
+        margin-top: -@tooltipArrowWidth;
+        border-width: @tooltipArrowWidth @tooltipArrowWidth @tooltipArrowWidth 0;
+        border-right-color: @tooltipArrowColor;
+    }
+    &.left .tooltip-arrow {
+        top: 50%;
+        right: 0;
+        margin-top: -@tooltipArrowWidth;
+        border-width: @tooltipArrowWidth 0 @tooltipArrowWidth @tooltipArrowWidth;
+        border-left-color: @tooltipArrowColor;
+    }
+    &.bottom .tooltip-arrow {
+        top: 0;
+        left: 50%;
+        margin-left: -@tooltipArrowWidth;
+        border-width: 0 @tooltipArrowWidth @tooltipArrowWidth;
+        border-bottom-color: @tooltipArrowColor;
+    }
 }
 
 
@@ -421,13 +560,7 @@ img {
 
 
 
-
-
-
-
-
-
-
-
-
-
+.gridelement-content{
+    min-height: 20em;
+    .animate(1000ms);
+}
