--- a/Templates/template.galleryImageViewer.html
+++ b/Templates/template.galleryImageViewer.html
@@ -1,17 +1,33 @@
-<div class="dumbBoxWrap gallery-image-viewer" ng-controller="galleryImageViewerController" ng-show="gallery" >
+<div class="dumbBoxWrap gallery-image-viewer" ng-controller="galleryImageViewerController" ng-show="gallery">
 	<div class="dumbBoxOverlay">
+		<div ng-show="loading" class="loader">
+			<img src="Css/loaders/horizontalloadersmall_white.gif" alt="loading..."/>
+		</div>
 		&nbsp;
 	</div>
-	<div class="vertical-offset"  >
-		<div >
-			<button ng-click="prev()" class="btn btn-link" tooltip="předchozí (kurzor doleva)" tooltip-placement="right"><b class="icon icon-chevron-left icon-white">&nbsp</b></button>
-			<button ng-click="next()" class="btn btn-link" tooltip="další (kurzor doprava)" tooltip-placement="right"><b class="icon icon-chevron-right icon-white">&nbsp</b></button>
-			<button ng-click="close()" class="btn btn-link" tooltip="zavřít (Esc)" tooltip-placement="bottom"><b class="icon icon-remove icon-white">&nbsp</b></button>
-			<span style="color: white" ng-show="skipping > 0" >...přeskakujem.....</span>
-			<div ng-show="loading" style="float:right"><img src="Css/loaders/horizontalloadersmall_white.gif"></div>
+	<div class="vertical-offset">
+		<div class="navigation-buttons">
+			<button ng-click="prev()" class="btn btn-link"
+					tooltip="předchozí (kurzor doleva)"
+					tooltip-popup-delay="500"
+					tooltip-placement="right">
+				<i class="icon-chevron-left icon-3x-responsive"></i>
+			</button>
+			<button ng-click="next()" class="btn btn-link"
+					tooltip="další (kurzor doprava)"
+					tooltip-popup-delay="500"
+					tooltip-placement="bottom">
+				<i class="icon-chevron-right icon-3x-responsive"></i>
+			</button>
+			<button ng-click="close()" class="btn btn-link close"
+					tooltip="zavřít (Esc)"
+					tooltip-popup-delay="500"
+					tooltip-placement="bottom">
+				<i class="icon-remove icon-3x-responsive"></i>
+			</button>
+			<span style="color: white" ng-show="skipping > 0">......</span>
 		</div>
-		<ngc-responsive-image gallery-image="image" />
+		<ngc-responsive-image gallery-image="image"/>
 
 	</div>
 </div>
-
