--- a/Templates/template.ngcResponsiveImage.html
+++ b/Templates/template.ngcResponsiveImage.html
@@ -19,17 +19,17 @@
 		</style>
 		<div ng-show="!loading">
 			<div class="actions">
-				<button ng-show="isOverFlowable()" ng-click="showFullSize()" class="btn-link"><span class="icon-white"
-																									ng-class="isFullSizeCssClass()"
-																									tooltip="{{fullSizeTooltip()}}"
-																									tooltip-popup-delay="300"
-																									tooltip-placement="right"
-						>&nbsp;</span>
+				<button ng-show="isOverFlowable()" ng-click="showFullSize()" class="btn-link" >
+					<span class="icon-2x-responsive"
+						  ng-class="isFullSizeCssClass()"
+						  tooltip="{{fullSizeTooltip()}}"
+						  tooltip-popup-delay="500"
+						  tooltip-placement="right">&nbsp;</span>
 				</button>
 			</div>
 		</div>
 		<div ng-show="!loading">
-			<img  ngc-lazy-image="source" width="100%" height="100%"/>
+			<img ngc-lazy-image="source" width="100%" height="100%"/>
 		</div>
 
 	</div>
