--- a/Templates/template.p.html
+++ b/Templates/template.p.html
@@ -1,5 +1,5 @@
 <div class="template-p">
-	<div class="navigation">
+	<div class="navigation" ng-show="!loading">
 		<div class="container_12">
 			<div class="grid_1">
 				<button ng-click="prev()" class="btn-link" ng-disabled="isFirst">
@@ -25,13 +25,14 @@
 	<div class="clear"></div>
 
 	<div class="container_12">
-		<div gridelement="currentGridElement" class="gridelement-content"></div>
-
-		<div class="grid_12">
-			<div ng-show="loading" class="loader">
-				<img src="Css/loaders/horizontalloadersmall_green.gif" alt="loading..."/>
+		<div gridelement="currentGridElement" class="gridelement-content">
+			<div class="centered-contaier">
+				<div class="loader centered-content">
+					<img src="Css/loaders/horizontalloadersmall_green.gif" alt="loading..."/>
+				</div>
 			</div>
-
+		</div>
+		<div class="grid_12">
 			<div class="footer">
 				<div class="logo">
 					<a href="http://www.facebook.com/JaromirTomka" target="_blank">
@@ -48,7 +49,20 @@
 				<span class="divider"></span>
 			</div>
 		</div>
-
 	</div>
+
+	<style>
+		.centered-contaier {
+			display: table;
+			width: 100%;
+			height: 100%;
+		}
+
+		.centered-content {
+			display: table-cell;
+			vertical-align: middle;
+			text-align: center;
+		}
+	</style>
 
 </div>
