--- a/Templates/template.gridelements.html
+++ b/Templates/template.gridelements.html
@@ -73,7 +73,7 @@
 
 <script id="gdataalbum.thtml" type="text/ng-template" ><div>
 	<div class="gdata-album-list" ng-controller="gridelementGdataAlbumCtrl">
-			<div class="first-image-box grid_12 btn-link" ng-click="showImage(gdataAlbumId, 0)" ng-show="firstPhoto">
+			<div class="first-image-box grid_12 btn-link" ng-click="showImage(gdataAlbumId, 0)" >
 				<div class="first-image-content">
 					<div class="image-placeholder">
 						<img ngc-lazy-image="firstPhoto.Large.PhotoUri"/>
