--- a/Templates/template.ngcResponsiveImage.html
+++ b/Templates/template.ngcResponsiveImage.html
@@ -29,7 +29,7 @@
 			</div>
 		</div>
 		<div ng-show="!loading">
-			<img ngc-lazy-image="source" width="100%" height="100%"/>
+			<img ngc-lazy-image="source" width="100%" height="100%" alt="image"/>
 		</div>
 
 	</div>
