--- a/Css/main.less
+++ b/Css/main.less
@@ -19,6 +19,7 @@ h1, h2, h3 {
 img {
     max-width: 100%;
 }
+a img {border: none; }
 
 .view {
     min-height: 100%;
@@ -559,19 +560,13 @@ img {
 }
 
 
-
-
-
-
-
-
-
-
-
-
-
-
 .gridelement-content{
     min-height: 20em;
     .animate(1000ms);
+}
+
+.kontakt {
+	padding-bottom: 10px;
+	padding-right: 10px;
+	p { margin: 0px; padding: 0px}
 }
