--- a/Templates/template.home.html
+++ b/Templates/template.home.html
@@ -13,6 +13,8 @@
 			</div>
 		</div>
 	</div>
+
+
 	<div class="grid_6">
 		<div class="grid_6">
 			<div class="home">
@@ -53,7 +55,7 @@
 		</div>
 		<div class="grid_6">
 			<div class="home">
-				<div class="homeimage lastline">
+				<div class="homeimage">
 					<div class="image-placeholder">
 						<a href="#!/p/{{pageLink}}/3">
 							<img ngc-lazy-image="homeData[3].images.Thumbnails[1].PhotoUri" width="100%" height="100%"/>
@@ -65,10 +67,45 @@
 		</div>
 		<div class="grid_6">
 			<div class="home">
-				<div class="homeimage lastline">
+				<div class="homeimage">
 					<div class="image-placeholder">
 						<a href="#!/p/{{pageLink}}/4">
 							<img ngc-lazy-image="homeData[4].images.Thumbnails[1].PhotoUri" width="100%" height="100%"/>
+							<div class="gallery-info-text"><h1 class="font-3x-responsive">{{homeData[4].Resources.header.Value}}</h1></div>
+						</a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+
+	<div class="grid_6">
+		<div class="kontakt">
+			<p>Jaromír Tomka</p>
+			<p>pod hradem 45</p>
+			<p>785 01 Šternberk</p>
+		</div>
+	</div>
+	<div class="grid_6">
+		<div class="grid_6">
+			<div class="home">
+				<div class="homeimage lastline">
+					<div class="image-placeholder">
+						<a href="#!/p/{{pageLink}}/3">
+							<imgx ngc-lazy-image="homeData[3].images.Thumbnails[1].PhotoUri" width="100%" height="100%"/>
+							<div class="gallery-info-text"><h1 class="font-3x-responsive">{{homeData[3].Resources.header.Value}}</h1></div>
+						</a>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="grid_6">
+			<div class="home">
+				<div class="homeimage lastline">
+					<div class="image-placeholder">
+						<a href="#!/p/{{pageLink}}/4">
+							<imgx ngc-lazy-image="homeData[4].images.Thumbnails[1].PhotoUri" width="100%" height="100%"/>
 							<div class="gallery-info-text"><h1 class="font-3x-responsive">{{homeData[4].Resources.header.Value}}</h1></div>
 						</a>
 					</div>
