--- a/Templates/template.home.html
+++ b/Templates/template.home.html
@@ -79,6 +79,7 @@
 		</div>
 	</div>
 
+	<div class="clearfix"></div>
 
 	<div class="grid_6">
 		<div class="kontakt">
@@ -88,12 +89,8 @@
 		</div>
 	</div>
 	<div class="grid_6">
-		<div class="grid_6">
-		</div>
-		<div class="grid_6">
-		</div>
-	</div>
 
+	</div>
 
 	<!--<div class="grid_3" ng-repeat="image in homeImagesBegin" >-->
 	<!--<div class="home">-->
