--- a/Templates/template.home.html
+++ b/Templates/template.home.html
@@ -81,15 +81,32 @@
 
 	<div class="clearfix"></div>
 
-	<div class="grid_6">
-		<div class="kontakt">
-			<p>Jaromír Tomka</p>
-			<p>pod hradem 45</p>
-			<p>785 01 Šternberk</p>
-		</div>
-	</div>
-	<div class="grid_6">
+	<div class="grid_4 footer">
+		<div class="grid_7">
+			<div class="kontakt">
+				<p>Jaromír Tomka</p>
+				<p>pod hradem 45</p>
+				<p>785 01 Šternberk</p>
+			</div>
 
+		</div>
+		<div class="grid_5">
+			<div class="kontakt">
+				<p>+420 737 016 101</p>
+				<p class="logo">
+					<a href="http://www.facebook.com/JaromirTomka" target="_blank">
+						<i class="icon-facebook-sign icon icon-2x-responsive"></i>
+					</a>
+				</p>
+			</div>
+
+		</div>
+
+	</div>
+	<div class="grid_8 footer dalsi" >
+		<a href="">
+			<h1>DALŠÍ PRÁCE <i class="icon-angle-down"></i></h1>
+		</a>
 	</div>
 
 	<!--<div class="grid_3" ng-repeat="image in homeImagesBegin" >-->
