--- a/Templates/template.home.html
+++ b/Templates/template.home.html
@@ -6,14 +6,13 @@
 					<a href="#!/p/{{pageLink}}/0"
 					   ng-show="homeData[0].images"
 					   ng-animate="{show: 'xexample-show', hide: 'xexample-hide'}">
-						<img ngc-lazy-image="homeData[0].images.Thumbnails[2].PhotoUri" width="100%" height="100%"/>
-						<div class="gallery-info-text"><h1 class="font-3x-responsive">{{homeData[0].Resources.header.Value}}</h1></div>
+						<img ngc-lazy-image="homeData[0].images.Thumbnails[2].PhotoUri" width="100%" height="100%" />
+						<h1 class="font-3x-responsive gallery-info-text">{{homeData[0].Resources.header.Value}}</h1>
 					</a>
 				</div>
 			</div>
 		</div>
 	</div>
-
 
 	<div class="grid_6">
 		<div class="grid_6">
@@ -21,8 +20,8 @@
 				<div class="homeimage">
 					<div class="image-placeholder">
 						<a href="#!/p/{{pageLink}}/1">
-							<img ngc-lazy-image="homeData[1].images.Thumbnails[1].PhotoUri" width="100%" height="100%"/>
-							<div class="gallery-info-text"><h1 class="font-3x-responsive">{{homeData[1].Resources.header.Value}}</h1></div>
+							<img src="" ngc-lazy-image="homeData[1].images.Thumbnails[1].PhotoUri" width="100%" height="100%" />
+							<h1 class="font-3x-responsive gallery-info-text">{{homeData[1].Resources.header.Value}}</h1>
 						</a>
 					</div>
 				</div>
@@ -34,7 +33,7 @@
 					<div class="image-placeholder">
 						<a href="#!/p/{{pageLink}}/2">
 							<img ngc-lazy-image="homeData[2].images.Thumbnails[1].PhotoUri" width="100%" height="100%"/>
-							<div class="gallery-info-text"><h1 class="font-3x-responsive">{{homeData[2].Resources.header.Value}}</h1></div>
+							<h1 class="font-3x-responsive gallery-info-text">{{homeData[2].Resources.header.Value}}</h1>
 						</a>
 					</div>
 				</div>
@@ -59,7 +58,7 @@
 					<div class="image-placeholder">
 						<a href="#!/p/{{pageLink}}/3">
 							<img ngc-lazy-image="homeData[3].images.Thumbnails[1].PhotoUri" width="100%" height="100%"/>
-							<div class="gallery-info-text"><h1 class="font-3x-responsive">{{homeData[3].Resources.header.Value}}</h1></div>
+							<h1 class="font-3x-responsive gallery-info-text">{{homeData[3].Resources.header.Value}}</h1>
 						</a>
 					</div>
 				</div>
@@ -71,7 +70,7 @@
 					<div class="image-placeholder">
 						<a href="#!/p/{{pageLink}}/4">
 							<img ngc-lazy-image="homeData[4].images.Thumbnails[1].PhotoUri" width="100%" height="100%"/>
-							<div class="gallery-info-text"><h1 class="font-3x-responsive">{{homeData[4].Resources.header.Value}}</h1></div>
+							<h1 class="font-3x-responsive gallery-info-text">{{homeData[4].Resources.header.Value}}</h1>
 						</a>
 					</div>
 				</div>
@@ -108,6 +107,25 @@
 			<h1>DALŠÍ PRÁCE <i class="icon-angle-down"></i></h1>
 		</a>
 	</div>
+
+	<div class="clearfix"></div>
+
+<!--<div ng-repeat="nextWorkImage in  nextWorkData">-->
+
+	<!--<div class="home">-->
+		<!--<div class="homeimage">-->
+			<!--<div class="image-placeholder">-->
+				<!--<a href="#!/p/{{pageLink}}/4">-->
+					<!--<img ngc-lazy-image="nextWorkImage.images.Thumbnails[1].PhotoUri" width="100%" height="100%"/>-->
+					<!--<div class="gallery-info-text"><h1 class="font-3x-responsive">{{nextWorkImage.Resources.header.Value}}</h1></div>-->
+				<!--</a>-->
+			<!--</div>-->
+		<!--</div>-->
+	<!--</div>-->
+
+
+<!--</div>-->
+
 
 	<!--<div class="grid_3" ng-repeat="image in homeImagesBegin" >-->
 	<!--<div class="home">-->
