--- a/Templates/template.home.html
+++ b/Templates/template.home.html
@@ -103,28 +103,31 @@
 
 	</div>
 	<div class="grid_8 footer dalsi" >
-		<a href="">
+		<a href="" ng-click="showNextWork()">
 			<h1>DALŠÍ PRÁCE <i class="icon-angle-down"></i></h1>
 		</a>
 	</div>
 
 	<div class="clearfix"></div>
+	<div class="next-work" ng-show="nextWork">
 
-<!--<div ng-repeat="nextWorkImage in  nextWorkData">-->
+		<div class="grid_3" ng-repeat="nextWorkImage in homeData">
+			<div class="home" ng-show="$index > 4">
+				<div class="homeimage">
+					<div class="image-placeholder">
+						<a href="#!/p/{{pageLink}}/{{$index}}">
+							<img ngc-lazy-image="nextWorkImage.images.Thumbnails[1].PhotoUri" width="100%"
+								 height="100%"/>
 
-	<!--<div class="home">-->
-		<!--<div class="homeimage">-->
-			<!--<div class="image-placeholder">-->
-				<!--<a href="#!/p/{{pageLink}}/4">-->
-					<!--<img ngc-lazy-image="nextWorkImage.images.Thumbnails[1].PhotoUri" width="100%" height="100%"/>-->
-					<!--<div class="gallery-info-text"><h1 class="font-3x-responsive">{{nextWorkImage.Resources.header.Value}}</h1></div>-->
-				<!--</a>-->
-			<!--</div>-->
-		<!--</div>-->
-	<!--</div>-->
+							<div class="gallery-info-text"><h1 class="font-3x-responsive">
+								{{nextWorkImage.Resources.header.Value}}</h1></div>
+						</a>
+					</div>
+				</div>
+			</div>
 
-
-<!--</div>-->
+		</div>
+	</div>
 
 
 	<!--<div class="grid_3" ng-repeat="image in homeImagesBegin" >-->
