--- a/Templates/template.p.html
+++ b/Templates/template.p.html
@@ -26,7 +26,7 @@
 
 	<div class="container_12">
 		<div gridelement="currentGridElement" class="gridelement-content">
-			<div class="centered-contaier">
+			<div class="centered-container">
 				<div class="loader centered-content">
 					<img src="Css/loaders/horizontalloadersmall_green.gif" alt="loading..."/>
 				</div>
@@ -50,19 +50,4 @@
 			</div>
 		</div>
 	</div>
-
-	<style>
-		.centered-contaier {
-			display: table;
-			width: 100%;
-			height: 100%;
-		}
-
-		.centered-content {
-			display: table-cell;
-			vertical-align: middle;
-			text-align: center;
-		}
-	</style>
-
 </div>
