--- a/Templates/template.home.html
+++ b/Templates/template.home.html
@@ -1,4 +1,4 @@
-<div class="container_12 right page-home" >
+<div class="container_12 right page-home" ng-show="hideLoader" ng-animate="{show : 'fade-in'}" >
 	<div class="grid_6">
 		<div class="home_main">
 			<div class="home_main_image">
