--- a/Templates/template.home.html
+++ b/Templates/template.home.html
@@ -39,7 +39,8 @@
 				</div>
 			</div>
 		</div>
-		<div class="grid_12">
+		<div class="clear"></div>
+		<div class="">
 			<div class="home-jara ">
 				<div class="jara">
 					<h1 class="handwritten">&nbsp;
@@ -52,12 +53,13 @@
 				</div>
 			</div>
 		</div>
+		<div class="clear"></div>
 		<div class="grid_6">
 			<div class="home">
 				<div class="homeimage">
 					<div class="image-placeholder">
 						<a href="#!/p/{{pageLink}}/3">
-							<img ngc-lazy-image="homeData[3].images.Thumbnails[1].PhotoUri" width="100%" height="100%"/>
+							<img ngc-lazy-image="homeData[3].images.Thumbnails[1].PhotoUri" width="100%" height="100%" src="" />
 							<h1 class="font-3x-responsive gallery-info-text">{{homeData[3].Resources.header.Value}}</h1>
 						</a>
 					</div>
