--- a/Css/masparti-responsive.css
+++ b/Css/masparti-responsive.css
@@ -19,7 +19,7 @@
     font-size: 2em;
   }
   .font-4x-responsive {
-    font-size: 6em;
+    font-size: 4em;
   }
   .font-3x-responsive {
     font-size: 3em;
@@ -43,7 +43,7 @@
     font-size: 4.800000000000001em;
   }
   .font-4x-responsive {
-    font-size: 4.800000000000001em;
+    font-size: 3.2em;
   }
   .font-3x-responsive {
     font-size: 2.4000000000000004em;
@@ -67,7 +67,7 @@
     font-size: 4.199999999999999em;
   }
   .font-4x-responsive {
-    font-size: 4.199999999999999em;
+    font-size: 2.8em;
   }
   .font-3x-responsive {
     font-size: 2.0999999999999996em;
@@ -82,6 +82,45 @@
     border: 1px solid yellow;
     min-width: 340px;
   }
+  .container_12 .grid_6 {
+    width: 100.0%;
+  }
+  .container_12 .grid_1 {
+    width: 16.666666666666664%;
+  }
+  .container_12 .grid_2 {
+    width: 33.33333333333333%;
+  }
+  .container_12 .grid_3 {
+    width: 50%;
+  }
+  .container_12 .grid_4 {
+    width: 66.66666666666666%;
+  }
+  .container_12 .grid_5 {
+    width: 83.33333333333333%;
+  }
+  .container_12 .grid_6 {
+    width: 100%;
+  }
+  .container_12 .grid_7 {
+    width: 16.666666666666664%;
+  }
+  .container_12 .grid_8 {
+    width: 33.33333333333333%;
+  }
+  .container_12 .grid_9 {
+    width: 50%;
+  }
+  .container_12 .grid_10 {
+    width: 66.66666666666666%;
+  }
+  .container_12 .grid_11 {
+    width: 83.33333333333333%;
+  }
+  .container_12 .grid_12 {
+    width: 100%;
+  }
   .icon-2x-responsive {
     font-size: 1.2em;
   }
@@ -92,7 +131,7 @@
     font-size: 3.5999999999999996em;
   }
   .font-4x-responsive {
-    font-size: 3.5999999999999996em;
+    font-size: 2.4em;
   }
   .font-3x-responsive {
     font-size: 1.7999999999999998em;
