--- a/Css/masparti-responsive.less
+++ b/Css/masparti-responsive.less
@@ -57,13 +57,17 @@
         font-size: 70%;
     }
 
-    .container_12, .container {
-        border: 1px solid blue;
-    }
+	.container_12 {
+		.container {
+			border: 1px solid blue;
+		}
+		.tablet_grid_12 {width: 100%}
+		.tablet_grid_4 {width: 33.33%}
+	}
 
-    .icon-2x-responsive { font-size: @icon2xSize * @coefficient; }
-    .icon-3x-responsive { font-size: @icon3xSize * @coefficient; }
-    .icon-4x-responsive { font-size: @icon4xSize * @coefficient; }
+	.icon-2x-responsive { font-size: @icon2xSize * @coefficient; }
+	.icon-3x-responsive { font-size: @icon3xSize * @coefficient; }
+	.icon-4x-responsive { font-size: @icon4xSize * @coefficient; }
 	.font-4x-responsive { font-size: @font4xSize * @coefficient;  }
 	.font-3x-responsive { font-size: @font3xSize * @coefficient;  }
 }
@@ -79,27 +83,14 @@
         border: 1px solid yellow;
 		min-width: 340px;
 	}
-  .container_12 .grid_6 {
-	width:100.0%;
-  }
 
-  .container_12 .grid_1 {  .grid(2)  }
-  .container_12 .grid_2 {  .grid(4)  }
-  .container_12 .grid_3 {  .grid(6)  }
-  .container_12 .grid_4 {  .grid(8)  }
-  .container_12 .grid_5 {  .grid(10)  }
-  .container_12 .grid_6 {  .grid(12)  }
-
-  .container_12 .grid_7 {  .grid(2)  }
-  .container_12 .grid_8 {  .grid(4)  }
-  .container_12 .grid_9 {  .grid(6)  }
-  .container_12 .grid_10 {  .grid(8)  }
-  .container_12 .grid_11 {  .grid(10)  }
-  .container_12 .grid_12 {  .grid(12)  }
-
-  .icon-2x-responsive { font-size: @icon2xSize * @coefficient; }
-    .icon-3x-responsive { font-size: @icon3xSize * @coefficient; }
-    .icon-4x-responsive { font-size: @icon4xSize * @coefficient; }
+	.container_12 {
+		.mobile_grid_12 { width: 100%}
+		.mobile_grid_6 { width: 50%}
+	}
+	.icon-2x-responsive { font-size: @icon2xSize * @coefficient; }
+	.icon-3x-responsive { font-size: @icon3xSize * @coefficient; }
+	.icon-4x-responsive { font-size: @icon4xSize * @coefficient; }
 	.font-4x-responsive { font-size: @font4xSize * @coefficient;  }
 	.font-3x-responsive { font-size: @font3xSize * @coefficient;  }
 }
