--- a/Css/masparti-responsive.css
+++ b/Css/masparti-responsive.css
@@ -53,9 +53,14 @@
   body {
     font-size: 70%;
   }
-  .container_12,
-  .container {
+  .container_12 .container {
     border: 1px solid blue;
+  }
+  .container_12 .tablet_grid_12 {
+    width: 100%;
+  }
+  .container_12 .tablet_grid_4 {
+    width: 33.33%;
   }
   .icon-2x-responsive {
     font-size: 1.4em;
@@ -82,44 +87,11 @@
     border: 1px solid yellow;
     min-width: 340px;
   }
-  .container_12 .grid_6 {
-    width: 100.0%;
-  }
-  .container_12 .grid_1 {
-    width: 16.666666666666664%;
-  }
-  .container_12 .grid_2 {
-    width: 33.33333333333333%;
-  }
-  .container_12 .grid_3 {
-    width: 50%;
-  }
-  .container_12 .grid_4 {
-    width: 66.66666666666666%;
-  }
-  .container_12 .grid_5 {
-    width: 83.33333333333333%;
-  }
-  .container_12 .grid_6 {
+  .container_12 .mobile_grid_12 {
     width: 100%;
   }
-  .container_12 .grid_7 {
-    width: 16.666666666666664%;
-  }
-  .container_12 .grid_8 {
-    width: 33.33333333333333%;
-  }
-  .container_12 .grid_9 {
+  .container_12 .mobile_grid_6 {
     width: 50%;
-  }
-  .container_12 .grid_10 {
-    width: 66.66666666666666%;
-  }
-  .container_12 .grid_11 {
-    width: 83.33333333333333%;
-  }
-  .container_12 .grid_12 {
-    width: 100%;
   }
   .icon-2x-responsive {
     font-size: 1.2em;
