--- a/Templates/template.home.html
+++ b/Templates/template.home.html
@@ -1,5 +1,5 @@
 <div class="container_12 right page-home" ng-show="hideLoader" ng-animate="{show : 'fade-in'}" >
-	<div class="grid_6">
+	<div class="grid_6 mobile_grid_12" >
 		<div class="home_main">
 			<div class="home_main_image">
 				<div class="image-placeholder">
@@ -14,7 +14,7 @@
 		</div>
 	</div>
 
-	<div class="grid_6">
+	<div class="grid_6 mobile_grid_12">
 		<div class="grid_6">
 			<div class="home">
 				<div class="homeimage">
