--- a/Templates/template.home.html
+++ b/Templates/template.home.html
@@ -1,3 +1,7 @@
+<div class="container_12">
+
+</div>
+
 <div class="container_12 right page-home" ng-show="hideLoader" ng-animate="{show : 'fade-in'}" >
 	<div class="grid_6">
 		<div class="home_main">
