--- a/Css/main.less
+++ b/Css/main.less
@@ -21,6 +21,15 @@ img {
 }
 a img {border: none; }
 
+
+.boos {
+    .logo-home {
+        padding-top:100px;
+    }
+}
+
+
+
 .view {
     min-height: 100%;
 }
