--- a/Templates/template.home.html
+++ b/Templates/template.home.html
@@ -1,136 +1,1 @@
-<div class="container_12">
-
-</div>
-
-<div class="container_12 right page-home" ng-show="hideLoader" ng-animate="{show : 'fade-in'}" >
-	<div class="grid_6">
-		<div class="home_main">
-			<div class="home_main_image">
-				<div class="image-placeholder">
-					<a href="#!/p/{{pageLink}}/0"
-					   ng-show="homeData[0].images"
-					   ng-animate="{show: 'xexample-show', hide: 'xexample-hide'}">
-						<img ngc-lazy-image="homeData[0].images.Thumbnails[2].PhotoUri" width="100%" height="100%" />
-						<h1 class="font-3x-responsive gallery-info-text">{{homeData[0].Resources.header.Value}}</h1>
-					</a>
-				</div>
-			</div>
-		</div>
-	</div>
-
-	<div class="grid_6">
-		<div class="grid_6">
-			<div class="home">
-				<div class="homeimage">
-					<div class="image-placeholder">
-						<a href="#!/p/{{pageLink}}/1">
-							<img src="" ngc-lazy-image="homeData[1].images.Thumbnails[1].PhotoUri" width="100%" height="100%" />
-							<h1 class="font-3x-responsive gallery-info-text">{{homeData[1].Resources.header.Value}}</h1>
-						</a>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="grid_6">
-			<div class="home">
-				<div class="homeimage">
-					<div class="image-placeholder">
-						<a href="#!/p/{{pageLink}}/2">
-							<img ngc-lazy-image="homeData[2].images.Thumbnails[1].PhotoUri" width="100%" height="100%"/>
-							<h1 class="font-3x-responsive gallery-info-text">{{homeData[2].Resources.header.Value}}</h1>
-						</a>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="clear"></div>
-		<div class="">
-			<div class="home-jara ">
-				<div class="jara">
-					<h1 class="handwritten">&nbsp;
-						<span ng-show="loadedData" ng-animate="{show : 'home-jara-show', hide : 'home-jara-hide'}">jára tomka</span>
-					</h1>
-
-					<h3 class="handwritten">
-						<span ng-show="loadedData" ng-animate="{show : 'home-jara-show', hide : 'home-jara-hide'}"> umělecký řezbář</span>
-					</h3>
-				</div>
-			</div>
-		</div>
-		<div class="clear"></div>
-		<div class="grid_6">
-			<div class="home">
-				<div class="homeimage">
-					<div class="image-placeholder">
-						<a href="#!/p/{{pageLink}}/3">
-							<img ngc-lazy-image="homeData[3].images.Thumbnails[1].PhotoUri" width="100%" height="100%" src="" />
-							<h1 class="font-3x-responsive gallery-info-text">{{homeData[3].Resources.header.Value}}</h1>
-						</a>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="grid_6">
-			<div class="home">
-				<div class="homeimage">
-					<div class="image-placeholder">
-						<a href="#!/p/{{pageLink}}/4">
-							<img ngc-lazy-image="homeData[4].images.Thumbnails[1].PhotoUri" width="100%" height="100%"/>
-							<h1 class="font-3x-responsive gallery-info-text">{{homeData[4].Resources.header.Value}}</h1>
-						</a>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-
-	<div class="clearfix"></div>
-
-	<div class="grid_4 footer">
-		<div class="grid_7">
-			<div class="kontakt">
-				<p>Jaromír Tomka</p>
-				<p>pod hradem 45</p>
-				<p>785 01 Šternberk</p>
-			</div>
-
-		</div>
-		<div class="grid_5">
-			<div class="kontakt">
-				<p>+420 737 016 101</p>
-				<p class="logo">
-					<a href="http://www.facebook.com/JaromirTomka" target="_blank">
-						<i class="icon-facebook-sign icon icon-2x-responsive"></i>
-					</a>
-				</p>
-			</div>
-
-		</div>
-
-	</div>
-	<div class="grid_8 footer dalsi" ng-mouseenter="xxx = true" ng-mouseleave="xxx = false" >
-		<a href="" ng-click="showNextWork()">
-			<h1><span ng-hide="!xxx" class="dalsi-text-inner" ng-animate="{show : 'dalsi-text-show', hide : 'dalsi-text-hide'}">DALŠÍ PRÁCE</span> <i class="icon-angle-down icon-button"></i></h1>
-		</a>
-	</div>
-
-	<div class="clearfix"></div>
-	<div class="next-work" ng-show="nextWork">
-
-		<div class="grid_3" ng-repeat="nextWorkImage in homeData">
-			<div class="home" ng-show="$index > 4">
-				<div class="homeimage">
-					<div class="image-placeholder">
-						<a href="#!/p/{{pageLink}}/{{$index}}">
-							<img ngc-lazy-image="nextWorkImage.images.Thumbnails[1].PhotoUri" width="100%"	 height="100%"/>
-							<h1 class="font-3x-responsive gallery-info-text">{{nextWorkImage.Resources.header.Value}}</h1>
-						</a>
-					</div>
-				</div>
-			</div>
-
-		</div>
-	</div>
-
-	<div class="clearfix"></div>
-</div>
+jbajsdb
