--- a/Css/responsive.less
+++ b/Css/responsive.less
@@ -12,8 +12,7 @@
  	 	font-size: 100%;
  	}
  	.container_12, .container {
- 	 	max-width: 1600px;
-		min-width: 960px;
+		width: 960px;
  	 	margin-left: auto;
  	 	margin-right: auto;
  	}
