--- a/Templates/template.p.html
+++ b/Templates/template.p.html
@@ -1,26 +1,6 @@
-<div class="template-p">
+<div class="template-pxx">
 	<div class="navigation" ng-show="!loading">
-		<div class="container_12">
-			<div class="grid_1">
-				<button ng-click="prev()" class="btn-link" ng-disabled="isFirst">
-					<i class="icon-angle-left icon-4x-responsive"></i>
-				</button>
-			</div>
-
-			<div class="grid_10">
-				<h1 class="font-4x-responsive">{{currentGridElement.Resources.header.Value}}</h1>
-
-				<h2>{{currentGridElement.Resources.text.Value }}</h2>
-			</div>
-
-			<div class="grid_1">
-				<div style="padding-right: 10px">
-					<button style="float:right" ng-click="next()" ng-disabled="isLast" class="btn-link">
-						<i class="icon-angle-right icon-4x-responsive"></i>
-					</button>
-				</div>
-			</div>
-		</div>
+			<h2>{{currentGridElement.Resources.text.Value}}</h2>
 	</div>
 	<div class="clear"></div>
 
@@ -30,23 +10,6 @@
 				<div class="loader centered-content">
 					<img src="Css/loaders/horizontalloadersmall_green.gif" alt="loading..."/>
 				</div>
-			</div>
-		</div>
-		<div class="grid_12">
-			<div class="footer">
-				<div class="logo">
-					<a href="http://www.facebook.com/JaromirTomka" target="_blank">
-						<i class="icon-facebook-sign icon-3x-responsive"></i>
-					</a>
-					<a href="#!/home">
-						<h2>jára tomka</h2>
-						<h5> umělecký řezbář</h5>
-					</a>
-				</div>
-				tel. +420 737 016 101
-				<span class="divider"></span>
-
-				<span class="divider"></span>
 			</div>
 		</div>
 	</div>
