--- a/Templates/template.page.html
+++ b/Templates/template.page.html
@@ -1,4 +1,12 @@
-<div ng-repeat="gridelement in page.GridElements">
-	<div gridelement="gridelement"></div>
-	<hr />
+<div class="grid_9">
+	<div ng-repeat="gridelement in page.GridElements" style="background-color: #0480be">
+		<div gridelement="gridelement"></div>
+	</div>
+</div>
+
+<div class="grid_3" style="background-color: #00aba9">
+	<div><a href="#!/page/projekty">aaa aa aa a</a></div>
+	<div><a href="#!/p/historie">bbb </a></div>
+	<div><a href="#!/page/cinnost">ccc ccc cc cccccc ccc</a></div>
+	<div><a href="#!/page/kontakt">xxx x</a></div>
 </div>
