predelano na json

--- a/Css/main.less
+++ b/Css/main.less
@@ -56,7 +56,7 @@ a img {
 	}
 
 	.logo-home {
-		padding-top: 134px;
+		padding-top: 115px;
 		text-align: right;
 		padding-right: 20px;
 		font-size: 70%;
@@ -66,6 +66,9 @@ a img {
 		h3 {
 			border-bottom: 1px solid @linkColor;
 			margin: 10px;
+			cursor: pointer;
+			font-size: 100%;
+			padding-bottom: 5px;
 		}
 		.group-list {
 			padding: 5px;
@@ -84,6 +87,7 @@ a img {
 }
 
 .view {
+	margin-top: 30px;
 	min-height: 100%;
 }
 
@@ -367,7 +371,10 @@ a img {
 		position: relative;
 		z-index: 10;
 	}
-
+	.album-image-wrap {
+		overflow:hidden;
+		background-color: #f6f6f6;
+	}
 }
 
 .template-p {
