--- a/Templates/template.gridelements.html
+++ b/Templates/template.gridelements.html
@@ -1,5 +1,5 @@
 <script id="text.thtml" type="text/ng-template"><div>
-		{{gridelement.Resources.text.Value}}
+		{{gridelement.resources.text}}
 	</div>
 </script>
 
@@ -19,8 +19,8 @@
 
 <script id="album.thtml" type="text/ng-template" ><div class="grid_4">
 	<div class="gdata-album-list" ng-controller="gridelementAlbumCtrl">
-		<div style="overflow:hidden">
-			<img class="album-image" src="{{album.Thumbnail.Thumbnails[0].PhotoUri}}"/>
+		<div style="min-height:{{y}}px" class="album-image-wrap">
+			<img style="min-height:{{y}}px" class="album-image" src="{{album.Thumbnail.Thumbnails[0].PhotoUri}}"/>
 			<div class="album-name">
 				<div class="content" title="{{name}}">
 					{{ name }}
