--- a/Templates/template.galleryImageViewer.html
+++ b/Templates/template.galleryImageViewer.html
@@ -16,7 +16,7 @@
 			<button ng-click="next()" class="btn btn-link"
 					tooltip="další (kurzor doprava)"
 					tooltip-popup-delay="500"
-					tooltip-placement="bottom">
+					tooltip-placement="bottom">`
 				<i class="icon-chevron-right icon-3x-responsive"></i>
 			</button>
 			<button ng-click="close()" class="btn btn-link close"
