--- a/Css/main.less
+++ b/Css/main.less
@@ -15,13 +15,19 @@ body, body * {
 h1, h2, h3 {
 	font-weight: 400;
 }
+
 ul, li {
 	margin: 0;
 	padding: 0;
 }
 
-a {	text-decoration: none;}
-a:hover {}
+a {
+	text-decoration: none;
+}
+
+a:hover {
+}
+
 a img {
 	border: none;
 }
@@ -372,7 +378,7 @@ a img {
 		z-index: 10;
 	}
 	.album-image-wrap {
-		overflow:hidden;
+		overflow: hidden;
 		background-color: #f6f6f6;
 	}
 }
@@ -514,6 +520,7 @@ a img {
 		/* Fixed position to provide the vertical offset */
 		position: fixed;
 		width: 100%;
+		height: 100%;
 		z-index: 40002; /* ensures box appears above overlay */
 	}
 	.dumbBox {
@@ -525,6 +532,14 @@ a img {
 		background-color: white;
 		padding: 10px;
 		border: 1px solid black;
+	}
+
+	.full-height {
+		height: 100%;
+		.full-height-content {
+			border: 1px solid red;
+			height: 90%;
+		}
 	}
 
 }
