--- a/Css/responsive.less
+++ b/Css/responsive.less
@@ -12,7 +12,7 @@
  	 	font-size: 100%;
  	}
  	.container_12, .container {
-		width: 960px;
+		width: 100%;
  	 	margin-left: auto;
  	 	margin-right: auto;
  	}
