--- a/Templates/template.p.html
+++ b/Templates/template.p.html
@@ -6,7 +6,7 @@
 
 	<div class="container_12">
 		<div gridelement="currentGridElement" class="gridelement-content">
-			<div class="centered-container">
+			<div>
 				<div class="loader centered-content">
 					<img src="Css/loaders/horizontalloadersmall_green.gif" alt="loading..."/>
 				</div>
