--- a/Css/main.less
+++ b/Css/main.less
@@ -1,4 +1,6 @@
 @import "variables";
+@import "imageEnvelope";
+@import "albumOverlay";
 
 body, html {
 	margin: 0;
@@ -380,6 +382,7 @@ a img {
 	.album-image-wrap {
 		overflow: hidden;
 		background-color: #f6f6f6;
+		cursor: pointer;
 	}
 }
 
@@ -773,6 +776,10 @@ a img {
 
 }
 
+.container_12.maincontent {
+	width: 960px;
+}
+
 ///////////
 .gdata-album-list {
 	.album-name {
@@ -783,3 +790,6 @@ a img {
 .index-content {
 	//background-color: red;
 }
+
+
+
