--- a/Templates/template.gridelements.html
+++ b/Templates/template.gridelements.html
@@ -1,54 +1,54 @@
-<script id="text.thtml" type="text/ng-template"><div>
-		{{gridelement.resources.text}}
-	</div>
-</script>
+<!--<script id="text.thtml" type="text/ng-template"><div>-->
+		<!--{{gridelement.resources.text}}-->
+	<!--</div>-->
+<!--</script>-->
 
-<script id="simplehtml.thtml" type="text/ng-template"><div ng-controller="simplehtml">
-	<div ng-bind-html-unsafe="ContentToHtml()"></div>
-	</div>
-</script>
+<!--<script id="simplehtml.thtml" type="text/ng-template"><div ng-controller="simplehtml">-->
+	<!--<div ng-bind-html-unsafe="ContentToHtml()"></div>-->
+	<!--</div>-->
+<!--</script>-->
 
-<script id="gdataalbum.thtml" type="text/ng-template" ><div>
-	<div class="gdata-album-list" ng-controller="gridelementGdataAlbumCtrl">
-		<div>{{ header }}</div>
-		<div>{{ text }}</div>
-		<div><img src="{{album.Thumbnail.Thumbnails[0].PhotoUri}}" /></div>
-	<div class="clear"></div>
-</div>
-</script>
-
-<script id="album.thtml" type="text/ng-template" ><div class="grid_4">
-	<div class="gdata-album-list" ng-controller="gridelementAlbumCtrl">
-		<div style="min-height:{{y}}px" class="album-image-wrap" >
-			<img style="min-height:{{y}}px" class="album-image" src="{{album.Thumbnail.Thumbnails[0].PhotoUri}}"/>
-			<div class="album-name">
-				<div class="content" title="{{name}}">
-					<a ng-click="testxxx(name)">{{ name }} ss</a>
-				</div>
-			</div>
-		</div>
-		<!--<div>{{ type }}</div>-->
-		<!--<div>{{ services }}</div>-->
-		<!--<div>{{ year }}</div>-->
+<!--<script id="gdataalbum.thtml" type="text/ng-template" ><div>-->
+	<!--<div class="gdata-album-list" ng-controller="gridelementGdataAlbumCtrl">-->
+		<!--<div>{{ header }}</div>-->
 		<!--<div>{{ text }}</div>-->
-	<div class="clear"></div>
-</div>
-</script>
+		<!--<div><img src="{{album.Thumbnail.Thumbnails[0].PhotoUri}}" /></div>-->
+	<!--<div class="clear"></div>-->
+<!--</div>-->
+<!--</script>-->
 
-<script id="gdataalbum_Single.thtml" type="text/ng-template"><div>
-	<div class="gdata-album" ng-controller="gridelementGdataAlbumCtrl">
+<!--<script id="album.thtml" type="text/ng-template" ><div class="grid_4">-->
+	<!--<div class="gdata-album-list" ng-controller="gridelementAlbumCtrl">-->
+		<!--<div style="min-height:{{y}}px" class="album-image-wrap" >-->
+			<!--<img style="min-height:{{y}}px" class="album-image" src="{{album.Thumbnail.Thumbnails[0].PhotoUri}}"/>-->
+			<!--<div class="album-name">-->
+				<!--<div class="content" title="{{name}}">-->
+					<!--<a ng-click="imageClick()">.{{ name }}..</a>-->
+				<!--</div>-->
+			<!--</div>-->
+		<!--</div>-->
+		<!--&lt;!&ndash;<div>{{ type }}</div>&ndash;&gt;-->
+		<!--&lt;!&ndash;<div>{{ services }}</div>&ndash;&gt;-->
+		<!--&lt;!&ndash;<div>{{ year }}</div>&ndash;&gt;-->
+		<!--&lt;!&ndash;<div>{{ text }}</div>&ndash;&gt;-->
+	<!--<div class="clear"></div>-->
+<!--</div>-->
+<!--</script>-->
 
-		<h1>{{gridelement.Resources.header.Value}}</h1>
-			<h3>{{gridelement.Resources.text.Value}}</h3>
-			<div class="first-image grid_3 btn-link" ng-click="showImage(gdataAlbumId, 0)" >
-				<img ngc-lazy-image="firstPhoto.Thumbnails[1].PhotoUri"/>
-			</div>
-		<div class="grid_9">
-				<div ng-repeat="photo in gdataAlbumPhotos" class="image-small">
-						<div ng-click="showImage(gdataAlbumId, $index + 1)" class="btn-link"><img  ngc-lazy-image="photo.Thumbnails[1].PhotoUri"/></div>
-				</div>
-		</div>
-	</div>
-	<div class="clear"></div>
-</div>
-</script>
+<!--<script id="gdataalbum_Single.thtml" type="text/ng-template"><div>-->
+	<!--<div class="gdata-album" ng-controller="gridelementGdataAlbumCtrl">-->
+
+		<!--<h1>{{gridelement.Resources.header.Value}}</h1>-->
+			<!--<h3>{{gridelement.Resources.text.Value}}</h3>-->
+			<!--<div class="first-image grid_3 btn-link" ng-click="showImage(gdataAlbumId, 0)" >-->
+				<!--<img ngc-lazy-image="firstPhoto.Thumbnails[1].PhotoUri"/>-->
+			<!--</div>-->
+		<!--<div class="grid_9">-->
+				<!--<div ng-repeat="photo in gdataAlbumPhotos" class="image-small">-->
+						<!--<div ng-click="showImage(gdataAlbumId, $index + 1)" class="btn-link"><img  ngc-lazy-image="photo.Thumbnails[1].PhotoUri"/></div>-->
+				<!--</div>-->
+		<!--</div>-->
+	<!--</div>-->
+	<!--<div class="clear"></div>-->
+<!--</div>-->
+<!--</script>-->
