--- a/Css/variables.less
+++ b/Css/variables.less
@@ -39,7 +39,7 @@
 
 //Links
 //-------------------------
-@linkColor:             yellowgreen;
+@linkColor:             #ff0000;
 @linkColorHover:        darken(@linkColor, 15%);
 
 
