--- a/Templates/template.p.html
+++ b/Templates/template.p.html
@@ -8,7 +8,7 @@
 		<div gridelement="currentGridElement" class="gridelement-content">
 			<div>
 				<div class="loader centered-content">
-					<img src="Css/loaders/horizontalloadersmall_green.gif" alt="loading..."/>
+					<img src="Css/loaders/loader.gif" alt="loading..."/>
 				</div>
 			</div>
 		</div>
