--- a/Css/albumOverlay.less
+++ b/Css/albumOverlay.less
@@ -1,7 +1,8 @@
 .album-overlay {
 	color: white;
+	height: 100%;
 
-	.imagePadding {
+	.ImagePadding {
 		padding-left: 10px;
 		padding-top: 10px;
 	}
@@ -10,7 +11,7 @@
 		display: inline-block;
 		cursor: pointer;
 		opacity: 0.6;
-		.imagePadding;
+		.ImagePadding;
 	}
 
 	.preview:hover {
@@ -18,14 +19,27 @@
 	}
 
 	.preview-current, .details, .more-details, .header {
-		.imagePadding;
+		.ImagePadding;
 	}
 
+	.header, .more-details {
+		display: table;
+		width: 100%;
+		height: 100%;
+	}
+	.header-content {
+		vertical-align: middle;
+		display: table-cell;
+	}
+	.more-details-content {
+		vertical-align: top;
+		display: table-cell;
+	}
 	.details {
 		position: relative;
 	}
 	.details-overlay {
-		.imagePadding;
+		.ImagePadding;
 		position: absolute;
 		width: 100%;
 		height: 100%;
