--- a/Css/main.less
+++ b/Css/main.less
@@ -1,6 +1,7 @@
 @import "variables";
 @import "imageEnvelope";
 @import "albumOverlay";
+@import "pageOverlay";
 
 body, html {
 	margin: 0;
@@ -381,6 +382,7 @@ button {
 	.album-image {
 		position: relative;
 		z-index: 10;
+		max-height:100%;
 	}
 	.album-image-wrap {
 		overflow: hidden;
@@ -543,8 +545,7 @@ button {
 	.full-height {
 		height: 100%;
 		.full-height-content {
-			border: 1px solid red;
-			height: 90%;
+			height: 100%;
 		}
 	}
 
