oprava designu na index

--- a/Css/main.less
+++ b/Css/main.less
@@ -78,6 +78,7 @@ button {
 		h3 {
 			border-bottom: 1px solid @linkColor;
 			margin: 10px;
+			margin-right: 0px;
 			cursor: pointer;
 			font-size: 100%;
 			padding-bottom: 5px;
@@ -369,6 +370,7 @@ button {
 
 .gdata-album-list {
 	padding: 10px;
+	padding-left: 0px;
 	.album-name {
 		margin-top: -20px;
 		position: relative;
@@ -782,6 +784,16 @@ button {
 
 .container_12.maincontent {
 	width: 960px;
+
+	.main-logo {
+		padding-top: 60px;
+		padding-bottom: 21px;
+		width: 220px;
+		img {
+			width: 100%;
+
+		}
+	}
 }
 
 ///////////
