--- a/Css/main.less
+++ b/Css/main.less
@@ -1,7 +1,8 @@
-@import "variables";
-@import "imageEnvelope";
-@import "albumOverlay";
-@import "pageOverlay";
+@import "src/responsive";
+@import "src/variables";
+@import "src/imageEnvelope";
+@import "src/albumOverlay";
+@import "src/pageOverlay";
 
 body, html {
 	margin: 0;
