build libs , main loader

--- a/Css/src/utils.less
+++ b/Css/src/utils.less
@@ -17,3 +17,16 @@
 	@ease: cubic-bezier(0.075, 0.820, 0.165, 1.000);
 	.AnimateEasing(@duration, @ease);
 }
+
+
+.centered-container {
+	display: table;
+	width: 100%;
+	height: 100%;
+}
+
+.centered-content {
+	display: table-cell;
+	vertical-align: middle;
+	text-align: center;
+}
