--- a/Templates/template.page.html
+++ b/Templates/template.page.html
@@ -1,7 +1,7 @@
 <div class="grid_9">
 	<div ng-show="gridElements.length === 0" style="width: 100%">&nbsp;</div>
 	<div ng-show="gridElements === undefined" style="width: 100%">
-		<img src="Css/loaders/loader.gif" alt="loading..."/>
+		<img src="resources/loaders/loader.gif" alt="loading..."/>
 		</div>
 	<div ng-repeat="gridelement in gridElements">
 		<div gridelement="gridelement"></div>
