--- a/Css/album_thtml.css
+++ b/Css/album_thtml.css
@@ -3,6 +3,16 @@
   overflow: hidden;
   white-space: nowrap;
 }
+.centered-container {
+  display: table;
+  width: 100%;
+  height: 100%;
+}
+.centered-content {
+  display: table-cell;
+  vertical-align: middle;
+  text-align: center;
+}
 .gdata-album-list {
   padding: 10px;
   padding-left: 0px;
