--- a/Css/main.less
+++ b/Css/main.less
@@ -1,17 +1,20 @@
 @import "src/responsive";
 @import "src/variables";
-@import "utils";
+@import "src/utils";
 @import "src/imageEnvelope";
 @import "src/albumOverlay";
 @import "src/pageOverlay";
 
 @import "album_thtml";
 
-
 body, html {
 	margin: 0;
 	padding: 0;
 	height: 100%;
+}
+body {
+	background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAECAYAAACp8Z5+AAAAIklEQVQIW2NkQAJnz56tZ4TxQRxjY+NGsACMA2IzInNAAgDZSw7r4ocGigAAAABJRU5ErkJggg==);
+
 }
 
 body, body * {
@@ -711,17 +714,6 @@ button {
 
 }
 
-.centered-container {
-	display: table;
-	width: 100%;
-	height: 100%;
-}
-
-.centered-content {
-	display: table-cell;
-	vertical-align: middle;
-	text-align: center;
-}
 
 .home-loader {
 	h2, h5 {
@@ -744,10 +736,29 @@ button {
 	.Animate(500ms);
 }
 
+
 .fade-out-active {
 	opacity: 0;
 }
 
+.loader-wrap{
+	height: 100%;
+	width: 100%;
+	opacity: 0.9;
+	z-index: 10001;
+	position: absolute;
+	background-color: #fff;
+}
+.background-wrap {
+	height: 100%;
+	background: -moz-linear-gradient(-45deg, rgba(255,255,255,1) 0%, rgba(255,255,255,0.74) 20%, rgba(255,255,255,0) 76%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, right bottom, color-stop(0%,rgba(255,255,255,1)), color-stop(20%,rgba(255,255,255,0.74)), color-stop(76%,rgba(255,255,255,0))); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(-45deg, rgba(255,255,255,1) 0%,rgba(255,255,255,0.74) 20%,rgba(255,255,255,0) 76%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(-45deg, rgba(255,255,255,1) 0%,rgba(255,255,255,0.74) 20%,rgba(255,255,255,0) 76%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(-45deg, rgba(255,255,255,1) 0%,rgba(255,255,255,0.74) 20%,rgba(255,255,255,0) 76%); /* IE10+ */
+	background: linear-gradient(135deg, rgba(255,255,255,1) 0%,rgba(255,255,255,0.74) 20%,rgba(255,255,255,0) 76%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#00ffffff',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+}
 
 .container_12.maincontent {
 	width: 90%;
